# NativeILDecompile

./: .gitignore  CMakeLists.txt  README.md
ILDecompileInterface/: Decompilation.cs  ILDecompileInterface.csproj  NativeTypeName.cs  Utils.cs
cmake/: DotnetPublish.cmake
example-project/: CMakeLists.txt  main.cpp
src/: ildecompile.cpp  ildecompile.h
